--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://itay_saban:i16042002saban@task-manager-jira-hater.gyd3yi1.mongodb.net/?retryWrites=true&w=majority&appName=Task-manager-Jira-Hater
+MONGO_URI=mongodb://localhost:27017/
 PORT=5000
